--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,7 +7,7 @@
       <ul class="logo_and_title">
         <li>
           <svg class="icon_footer_yacht" width="23" height="23">
-          <use href="./imeges/icons.svg#icon-boat-logo"></use>
+          <use href="./images/fontisto_yacht_png.png"></use>
         </svg>
           </svg>
         </li>
@@ -29,7 +29,7 @@
           <li>
             <a href="#" class="social_media_link">
               <svg width="32" height="32">
-                <use href="./images/icons.svg#icon-facebook"></use>
+                <use href="../images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
