--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -75,9 +75,7 @@ footer {
              
            /* Tablet */
 @media screen and (min-width: 768px) and (max-width: 1157px){
-    .container_footer{
-        display: flex;
-    }
+
     .line_footer {
         width: 704px;
         height: 0px;
@@ -85,7 +83,7 @@ footer {
     }
     .container_logo_and_title {
         margin-right: 135px;
-        padding-top: 69px;
+        margin-top: 69px;
         display: inline-block;
     }
     .menu_footer {
@@ -94,20 +92,19 @@ footer {
     }
     .social_footer {
         display: inline-block;
-        padding-left: 143px;
+        margin-left: 143px;
     }
     .container_menu_footer {
         display: inline-block;
-        padding-top: 64px;
     }
     .social_icons {
         display: flex;
         gap: 16px;
-        padding-top: 16px;
+        margin-top: 16px;
     }
     .tekst_vnizu_stranici_container {
-        padding-top: 100px;
-        padding-bottom: 16px;
+        margin-top: 100px;
+        margin-bottom: 16px;
     }
     .tekst_vnizu_stranici {
             color: rgba(246, 245, 239, 0.50);
