--- a/src/partials/yahts-block.html
+++ b/src/partials/yahts-block.html
@@ -4,6 +4,13 @@
   <div class="container container-swiper">
     <div class="yahtsblock-container">
       <h1 class="yahtsblock-tittle">
+        <img
+          src="../images/yaht-blok/Mask group.png"
+          alt=""
+          width="1722.286px"
+          height="1590.576px"
+          class="mask-group"
+        />
         Choose your dream yacht and sail away into the sunset
       </h1>
       <button class="yahtsblock-bt" type="button">Yacht rental</button>
@@ -321,20 +328,17 @@
           </div>
         </div>
       </div>
-      
-      
-      </div>
-      <div class="sfdg">
-        <svg class="swiper-button-prev" width="18" height="8">
-          <use href="../images/icons.svg#icon-arrow2"></use>
-        </svg>
-        <!-- <div class="swiper-button-prev"></div> -->
+    </div>
+    <div class="sfdg">
+      <svg class="swiper-button-prev" width="18" height="8">
+        <use href="../images/icons.svg#icon-arrow2"></use>
+      </svg>
+      <!-- <div class="swiper-button-prev"></div> -->
 
-        <svg class="swiper-button-next" width="18" height="8">
-          <use href="../images/icons.svg#icon-arrow1"></use>
-        </svg>
-        <!-- <div class="swiper-button-next"></div> -->
-      </div>
+      <svg class="swiper-button-next" width="18" height="8">
+        <use href="../images/icons.svg#icon-arrow1"></use>
+      </svg>
+      <!-- <div class="swiper-button-next"></div> -->
     </div>
   </div>
 </section>
