--- a/src/partials/about-blok.html
+++ b/src/partials/about-blok.html
@@ -1,7 +1,7 @@
 <!-- Olena Demydova -->
 
 <section class="about">
-  <div id="About" class="about-block">
+  <div class="about-block">
     <div class="about-text-block">
       <p class="about-big-text">
         <span class="about-color-text">Yacht Adventures</span>
