--- a/src/partials/yahts-block.html
+++ b/src/partials/yahts-block.html
@@ -5,7 +5,7 @@
     <div class="yahtsblock-container">
       <h1 class="yahtsblock-tittle">
         <img
-          src="../images/yaht-blok/Mask group.png"
+          src="./images/yaht-blok/Mask group.png"
           alt=""
           width="1722.286px"
           height="1590.576px"
@@ -13,7 +13,7 @@
         />
         Choose your dream yacht and sail away into the sunset
       </h1>
-      <button class="yahtsblock-bt" type="button">Yacht rental</button>
+      <button class="yahtsblock-bt" type="submit">Yacht rental</button>
     </div>
     <!-- Slider main container -->
 
