--- a/src/partials/yahts-block.html
+++ b/src/partials/yahts-block.html
@@ -1,6 +1,6 @@
 <!-- Руслан Афанасьев -->
 
-<section class="yahts-section">
+<section id="yahts" class="yahts-section">
   <div class="container container-swiper">
     <div class="yahtsblock-container">
       <h1 class="yahtsblock-tittle">
