--- a/src/partials/yahts-block.html
+++ b/src/partials/yahts-block.html
@@ -5,7 +5,7 @@
     <div class="yahtsblock-container">
       <h1 class="yahtsblock-tittle">
         <img
-          src="./images/yaht-blok/Mask group.png"
+          src="./images/yaht-blok/mask-group.png"
           alt=""
           width="1722.286px"
           height="1590.576px"
