--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,24 +4,27 @@
 <header class="header">
   <div class="header-container container">
     <div class="logo-section">
+      
       <img class="favicon" src="../images/logo/favicon.svg" alt="Boat" width="23" height="23">
+      <a href="./index.html">
       <img class="yacht-adv-icon" src="../images/logo/yacht Adventures.svg" alt="text-adv" width="186" height="23">
+      </a>
     </div>
 
     <nav class="header-nav">
       <ul class="header-list list">
 
         <li class="header-item">
-          <a class="header-link link" href="#About">About</a>
+          <a class="header-link link" href="#about">About</a>
         </li>
 
 
         <li class="header-item">
-          <a class="header-link link" href="#Yachts">Yachts</a>
+          <a class="header-link link" href="#yachts">Yachts</a>
         </li>
 
         <li class="header-item">
-          <a class="header-link link" href="#Reviews">Reviews</a>
+          <a class="header-link link" href="#reviews">Reviews</a>
         </li>
 
       </ul>
@@ -42,7 +45,9 @@
 <div class="menu-container js-menu-container" id="mobile-menu">
   <div class="mob-logo-section">
     <img src="../images/logo/favicon.svg" alt="Boat" width="18" height="18">
+    <a href="./index.html">
     <img src="../images/logo/yacht Adventures.svg" alt="text-adv" width="146" height="10">
+    </a>
 
     <button class="menu-toggle js-close-menu">
       <svg class="icon-close" width="24" height="24">
