--- a/src/css/header.css
+++ b/src/css/header.css
@@ -37,7 +37,7 @@
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 24px;
-    gap: 139px;
+    gap: 120px;
    
   }
 
@@ -46,6 +46,7 @@
     justify-content: center;
     align-items: center;
     gap: 8px;
+    
   }
 
   .header-list {
@@ -87,8 +88,6 @@
     justify-content: center;
     align-items: center;
     gap: 269px;
-    margin-left: 32px;
-    margin-right: 32px;
     margin-top: 32px;
   }
 
@@ -174,6 +173,7 @@
   background-color: rgba(17, 19, 31, 1);
 
 }
+
 
 .menu-toggle {
 
@@ -278,5 +278,38 @@
   letter-spacing: 0.42px;
   text-transform: uppercase;
 
+}
+
+.mobile-menu::before {
+  display: block;
+  position: absolute;
+  content:"";
+  width: 279px;
+    height: 279px;
+    transform: rotate(-44.916deg);
+    flex-shrink: 0;
+    border-radius: 279px;
+      opacity: 0.6000000238418579;
+      background: #91AFBA;
+      filter: blur(100px);
+      top: 474px;
+      right: 187px;
+      z-index: 0;
+}
+.mobile-menu::after {
+  display: block;
+  position: absolute;
+  content: "";
+  width: 279px;
+  height: 279px;
+  transform: rotate(-44.916deg);
+  flex-shrink: 0;
+  border-radius: 279px;
+  opacity: 0.8999999761581421;
+  background: #939CAC;
+  filter: blur(100px);
+  top: 614px;
+  left: 53px;
+  z-index: 0;
 }
 
