--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -58,9 +58,9 @@
   </div>
 
   <ul class="mobile-menu">
-    <li><a href="#About" class="mob-menu-link link">About</a></li>
-    <li><a href="#Yachts" class="mob-menu-link link">Yachts</a></li>
-    <li><a href="#Reviews" class="mob-menu-link link">Reviews</a></li>
+    <li><a href="#about" class="mob-menu-link link">About</a></li>
+    <li><a href="#yachts" class="mob-menu-link link">Yachts</a></li>
+    <li><a href="#reviews" class="mob-menu-link link">Reviews</a></li>
   </ul>
 
 
