--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,9 @@
 :root {
     --dark-blue: #11131F
+            --light-green: #93ABAE;
+        --linear-green: #BEC7C2, linear-gradient(107deg, #BEC7C2 0%, #A1B5BA 100%);
+        --white: #F6F5EF;
+        --blue-2: #1F212D;
 }
 
 ul,
@@ -32,26 +36,41 @@ footer {
         stroke-width: 1px;
         stroke: rgba(246, 245, 239, 0.20);
     }
-    .logo_and_title {
+    .footer_logo_and_title {
+        display: flex;
+        align-items: center;
         padding-top: 44px;
         padding-bottom: 44px;
         gap: 8px;
     }
+.icon_footer_yacht{
+    fill: var(--white);
+}
+ .menu_footer{
+display: flex;
+flex-direction: column;
+gap: 14px;
+ }
     .social_footer {
         padding-top: 40px;
+    }
+.social_footer_text{
+    margin-bottom: 16px;
+}
+    .text_main_footer{
+        
     }
     .tekst_vnizu_stranici {
         color: rgba(246, 245, 239, 0.50);
         text-align: center;
         font-family: DM Sans;
         font-size: 12px;
-        font-style: normal;
         font-weight: 400;
         line-height: 118%;
         letter-spacing: 0.36px;
     }
     .text_main_footer {
-        margin-bottom: 16px;
+        /* margin-bottom: 16px; */
     }
     .social_icons {
         display: flex;
@@ -60,14 +79,19 @@ footer {
     .social_media_link {
         stroke-width: 1px;
         stroke: rgba(246, 245, 239, 0.50);
+        fill: var(--white);
     }
     .tekst_vnizu_stranici_container {
         padding-top: 40px;
         padding-bottom: 14px;
-        justify-content: center
+        /* justify-content: center */
 }
     .spisok_vnizu_stranici {
         display: flex;
+        gap: 14px;
+        padding-top: 40px;
+        padding-bottom: 14px;
+        justify-content: center;
 }
 }
 
@@ -121,7 +145,9 @@ footer {
     }
 }
 
-.ramka {border-radius: 6px;
+.ramka {
+    display: flex;
+    border-radius: 6px;
     border: 1px solid rgba(246, 245, 239, 0.50);
     width: 32px;
     height: 32px;
