--- a/src/partials/yahts-block.html
+++ b/src/partials/yahts-block.html
@@ -15,12 +15,11 @@
       </h1>
       <button class="yahtsblock-bt" type="submit">Yacht rental</button>
     </div>
-    <!-- Slider main container -->
 
-    <div class="swiper">
-      <!-- Additional required wrapper -->
+    <!-- <div class="swiper">
+    
       <div class="swiper-wrapper">
-        <!-- Slides -->
+        
         <div class="swiper-slide">
           <img
             srcset="
@@ -333,12 +332,154 @@
       <svg class="swiper-button-prev" width="18" height="8">
         <use href="../images/icons.svg#icon-arrow2"></use>
       </svg>
-      <!-- <div class="swiper-button-prev"></div> -->
+      
 
       <svg class="swiper-button-next" width="18" height="8">
         <use href="../images/icons.svg#icon-arrow1"></use>
       </svg>
-      <!-- <div class="swiper-button-next"></div> -->
+      
+    </div> -->
+    <div>
+      <div class="swiper">
+        <div class="swiper-slide">
+          <img
+            srcset="
+              ./img/yaht/arrow-mobile@1x.jpg 1x,
+              ./img/yaht/arrow-mobile@2x.jpg 2x
+            "
+            src="./img/yaht/arrow-mobile@1x.jpg"
+            width="299px"
+            height="251px"
+            class="yahtsblock-img"
+          />
+          <div>
+            <div class="yahtsblock-holder">
+              <h3 class="yahtsblock-subject">Arrow</h3>
+              <p class="yahtsblock-text">LUXURY YAHTS</p>
+            </div>
+            <div class="yahtsblock-box">
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-item">LENGTH</li>
+                <li class="yahtsblock-item">BUILDER</li>
+                <li class="yahtsblock-item">BUILT</li>
+                <li class="yahtsblock-item">GUESTS</li>
+                <li class="yahtsblock-item">PRICE</li>
+              </ul>
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-items">48m(155ft)</li>
+                <li class="yahtsblock-items">Admiral</li>
+                <li class="yahtsblock-items">2021</li>
+                <li class="yahtsblock-items">11 in 5 cabins</li>
+                <li class="yahtsblock-items">€33,500,000</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img
+            srcset="
+              ./img/yaht/benetti-mobile@1x.jpg 1x,
+              ./img/yaht/benetti-mobile@2x.jpg 2x
+            "
+            src="./img/yaht/benetti-mobile@1x.jpg"
+            width="299px"
+            height="251px"
+            class="yahtsblock-img"
+          />
+          <div>
+            <div class="yahtsblock-holder">
+              <h3 class="yahtsblock-subject">BENETTI OASIS 40M...</h3>
+              <p class="yahtsblock-text">LUXURY YAHTS</p>
+            </div>
+            <div class="yahtsblock-box">
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-item">LENGTH</li>
+                <li class="yahtsblock-item">BUILDER</li>
+                <li class="yahtsblock-item">BUILT</li>
+                <li class="yahtsblock-item">GUESTS</li>
+                <li class="yahtsblock-item">PRICE</li>
+              </ul>
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-items">41m (133ft)</li>
+                <li class="yahtsblock-items">Benetti</li>
+                <li class="yahtsblock-items">2025</li>
+                <li class="yahtsblock-items">10 in 5 cabins</li>
+                <li class="yahtsblock-items">€23,210,000</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <img
+            srcset="
+              ./img/yaht/belle-mobile@1x.jpg 1x,
+              ./img/yaht/belle-mobile@2x.jpg 2x
+            "
+            src="./img/yaht/belle-mobile@1x.jpg"
+            width="299px"
+            height="251px"
+            class="yahtsblock-img"
+          />
+          <div>
+            <div class="yahtsblock-holder">
+              <h3 class="yahtsblock-subject">BELLE ANNA</h3>
+              <p class="yahtsblock-text">LUXURY YAHTS</p>
+            </div>
+            <div class="yahtsblock-box">
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-item">LENGTH</li>
+                <li class="yahtsblock-item">BUILDER</li>
+                <li class="yahtsblock-item">BUILT</li>
+                <li class="yahtsblock-item">GUESTS</li>
+                <li class="yahtsblock-item">PRICE</li>
+              </ul>
+              <ul class="yahtsblock-list">
+                <li class="yahtsblock-items">50m(155ft)</li>
+                <li class="yahtsblock-items">ISA</li>
+                <li class="yahtsblock-items">2012</li>
+                <li class="yahtsblock-items">12 in 6 cabins</li>
+                <li class="yahtsblock-items">€21,000,000</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="qweqweqwe">
+        <div class="svg-swiper">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="18"
+            height="8"
+            viewBox="0 0 18 8"
+            fill="none"
+            class="svg-arrow"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M5.5 0L0 4L5.5 8V4.69282L18 4.69282V3.30718L5.5 3.30718V0Z"
+              fill="#F6F5EF"
+            />
+          </svg>
+        </div>
+        <div class="svg-swiper">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="18"
+            height="8"
+            viewBox="0 0 18 8"
+            fill="none"
+            class="svg-arrow"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M12.5 0L18 4L12.5 8V4.69282L0 4.69282L0 3.30718L12.5 3.30718V0Z"
+              fill="#F6F5EF"
+            />
+          </svg>
+        </div>
+      </div>
     </div>
   </div>
 </section>
