--- a/src/css/yahts-block.css
+++ b/src/css/yahts-block.css
@@ -15,6 +15,8 @@
   width: 335px;
   height: 469px;
   margin: 0 auto;
+  display: flex;
+  gap: 16px;
 }
 @media only screen and (min-width: 768px) {
   .swiper {
@@ -273,10 +275,6 @@
   margin-top: 24px;
   margin-left: 24px;
 }
-.swiper-button-next,
-.swiper-button-prev {
-  /* margin-top: 180px; */
-}
 
 .swiper-button-prev {
   fill: var(--white, #f6f5ef);
@@ -287,4 +285,33 @@
   fill: var(--white, #f6f5ef);
   border-radius: 60px;
   border: 1px solid var(--white, #f6f5ef);
+}
+.svg-swiper {
+  fill: var(--white, #f6f5ef);
+  padding: 14px;
+  border-radius: 60px;
+  border: 1px solid var(--white, #f6f5ef);
+}
+@media only screen and (min-width: 768px) {
+  .svg-swiper {
+    padding: 14px 16px 14px 16px;
+  }
+}
+.qweqweqwe {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 24px;
+  gap: 16px;
+}
+@media only screen and (min-width: 1280px) {
+  .qweqweqwe {
+    position: relative;
+    top: -265px;
+    justify-content: space-between;
+  }
+}
+
+.svg-arrow {
+  display: block;
 }
