--- a/src/partials/yahts-block.html
+++ b/src/partials/yahts-block.html
@@ -340,7 +340,7 @@
       
     </div> -->
     <div>
-      <div class="swiper">
+      <div class="swiper swiper-yahts">
         <div class="swiper-slide">
           <img
             srcset="
