--- a/src/css/yahts-block.css
+++ b/src/css/yahts-block.css
@@ -11,20 +11,27 @@
     padding: 82px 0;
   }
 }
-.swiper {
+.swiper-yahts {
   width: 335px;
   height: 469px;
   margin: 0 auto;
   display: flex;
   gap: 16px;
 }
+/* .swiper {
+  width: 335px;
+  height: 469px;
+  margin: 0 auto;
+  display: flex !important;
+  gap: 16px;
+} */
 @media only screen and (min-width: 768px) {
-  .swiper {
+  .swiper-yahts {
     width: 704px;
   }
 }
 @media only screen and (min-width: 1280px) {
-  .swiper {
+  .swiper-yahts {
     width: 1094px;
   }
 }
