--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,15 @@
 <!-- Kateryna Zhylan -->
 
+  
+
 <!-- Header section -->
-<header class="header">
-  <div class="header-container container">
+<header class="header container">
+  <div class="header-container">
     <div class="logo-section">
       
-      <img class="favicon" src="../images/logo/favicon.svg" alt="Boat" width="23" height="23">
+      <img class="favicon" src="./images/logo/favicon.svg" alt="Boat" width="23" height="23">
       <a href="./index.html">
-      <img class="yacht-adv-icon" src="../images/logo/yacht Adventures.svg" alt="text-adv" width="186" height="23">
+      <img class="yacht-adv-icon" src="./images/logo/yacht Adventures.svg" alt="text-adv" width="186" height="23">
       </a>
     </div>
 
@@ -42,11 +44,11 @@
 
 <!-- Mobile MENU -->
 
-<div class="menu-container js-menu-container" id="mobile-menu">
+<div class="menu-container js-menu-container container" id="mobile-menu">
   <div class="mob-logo-section">
-    <img src="../images/logo/favicon.svg" alt="Boat" width="18" height="18">
+    <img src="./images/logo/favicon.svg" alt="Boat" width="18" height="18">
     <a href="./index.html">
-    <img src="../images/logo/yacht Adventures.svg" alt="text-adv" width="146" height="10">
+    <img src="./images/logo/yacht Adventures.svg" alt="text-adv" width="146" height="10">
     </a>
 
     <button class="menu-toggle js-close-menu">
@@ -64,6 +66,8 @@
   </ul>
 
 
-
-
 </div>
+
+
+
+
