--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,13 +1,13 @@
 <!-- Vadym -->
 
 <footer>
-  <div class="container">
+  <div class="container footer_container">
     <hr class="line_footer" />
     <div class="container_logo_and_title">
       <ul class="footer_logo_and_title">
-        <li>
+        <li class="icon_settings">
           <svg class="icon_footer_yacht" width="23" height="23">
-            <use href="../images/icons.svg#icon-boat-logo"></use>
+            <use href="./images/icons.svg#icon-boat-logo"></use>
           </svg>
         </li>
         <li class="text_main_footer">
