--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -62,7 +62,7 @@
         <li>
           <a href="#" class="social_media_link">
             <svg width="32" height="32" class="ramka">
-              <use href="../images/icons.svg#icon-youtube1"></use>
+              <use href="./images/icons.svg#icon-youtube1"></use>
             </svg>
           </a>
         </li>
