--- a/src/css/yahts-block.css
+++ b/src/css/yahts-block.css
@@ -15,7 +15,7 @@
   width: 335px;
   height: 469px;
   margin: 0 auto;
-  display: flex;
+  display: flex !important;
   gap: 16px;
 }
 /* .swiper {
