--- a/src/partials/reviews-block.html
+++ b/src/partials/reviews-block.html
@@ -147,10 +147,11 @@
           <div class="swiper-pagination"></div>
         </div>
 
-        ----СЛАЙДЕР----->
+        ----СЛАЙДЕР--
     <a class="review-block-link" href="#top">
       <img src="./images/arrow_up.svg" />
     </a>
+    ----->
     <div>ery</div>
   </div>
 </section>
