--- a/src/partials/rent-block.html
+++ b/src/partials/rent-block.html
@@ -1,6 +1,6 @@
 <!-- Надія Павлюченко -->
 
-<section class="rent">
+<section id="rent-section" class="rent">
   <div class="container rent-container">
     <div class="rent-description">
       <h2 class="rent-title">Rent a yacht now</h2>
