--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,7 @@
 <!-- Vadym -->
 
-<footer>
+ <hr class="line_footer" />
   <div class="container footer_container">
-    <hr class="line_footer" />
     <div class="container_logo_and_title">
       <ul class="footer_logo_and_title">
         <li class="icon_settings">
@@ -68,10 +67,11 @@
         </li>
       </ul>
     </div>
-
+  </div>
+      <div class="container_vnizu_stranici">
     <ul class="spisok_vnizu_stranici">
       <p class="tekst_vnizu_stranici">2023. Yacht Adventures</p>
       <p class="tekst_vnizu_stranici">Privacy Policy</p>
     </ul>
-  </div>
+    </div>
 </footer>
