--- a/src/css/header.css
+++ b/src/css/header.css
@@ -170,7 +170,11 @@
   transition: transform 250ms ease-in-out;
 
   background-color: rgba(17, 19, 31, 1);
+  visibility: hidden;
 
+}
+.menu-container.is-open{
+  visibility: visible;
 }
 
 
