--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -3,25 +3,195 @@
 
 .hero-section {
     background-color: var(--dark-blue);
+    padding-bottom: 164px;
 }
 
 .container {
 }
+
+
+.hero-blur{
+    transform: rotate(-45.074deg);
+    flex-shrink: 0;
+    filter: blur(100px);
+    z-index: 0;
+    position: absolute;
+    
+
+}
+
+.hero-blur-one{
+    width: 414px;
+    height: 414px;
+    border-radius: 414px;
+    opacity: 0.6000000238418579;
+    background: #91AFBA;
+    bottom: 52px;
+    right: 1120px;
+}
+
+.hero-blur-two{
+    width: 414px;
+    height: 414px;
+    border-radius: 414px;
+    opacity: 0.6000000238418579;
+    background: #91AFBA;
+    bottom: 3px;
+    left: 1px;
+}
+
+.hero-blur-three{
+    width: 316px;
+    height: 316px;
+    border-radius: 316px;
+    opacity: 0.30000001192092896;
+    background: #A6A9B2;
+    bottom: 130px;
+    left: 250px;
+}
+
+
+/* .hero-blur{
+    width: 279px;
+    height: 279px;
+    transform: rotate(-44.916deg);
+    flex-shrink: 0;
+    border-radius: 279px;
+    opacity: 0.8999999761581421;
+    background: #939CAC;
+    filter: blur(100px);
+    position: absolute;
+    bottom: 112px;
+    right: 183px;
+    z-index:0;
+}
+
+@media only screen and (min-width: 768px) {
+  .hero-blur {
+    width: 414px;
+    height: 414px;
+    transform: rotate(-45.074deg);
+    border-radius: 414px;
+    bottom: 52px;
+    right: 1120px;
+  }
+} */
+
+.images-title-container{
+    display: flex;
+    gap: 236px;
+}
+
+.hero-clients-images-list{
+    background-image: url(..//img/hero-images/desktop-background@2x-min.png);
+    background-repeat: no-repeat;
+    margin-top: 64px;
+    max-width: 426px;
+    height: 598px;
+    background-size: cover;
+}
+
+
+.clients-container{
+    display: flex;
+    position: relative;
+    margin-bottom: 11px;
+}
+
+.first-person {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 3;
+}
+
+.second-person {
+    position: absolute;
+    top: 0px;
+    left: 45px;
+    z-index: 2;
+}
+
+.third-person{
+    position: absolute;
+    top: 0px;
+    left: 92px;
+    z-index: 1;
+}
+
+.hero-clients-images-list{
+    padding-top: 32px;
+    padding-left: 32px;
+}
+
+.clients-text{
+    position: absolute;
+    top: 220px;
+    text-transform: uppercase;
+    color: #11131F;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 110%;
+        /* 15.4px */
+    letter-spacing: 0.56px;
+}
+
+.yacht-image{
+    position: relative;
+    bottom: 40px;
+    right: 15px;
+}
+
+.hero-image-text{
+    display: flex;
+    flex-wrap:nowrap;
+    gap: 12px;
+    align-items: center;
+    position:relative;
+    bottom: 20px;
+}
+
+.man-sunglasses{
+        position: relative;
+        /* border-left: hidden; */
+        left: 265px;
+}
+
+.dollar-text{
+    color: #11131F;
+    font-size: 60px;
+    line-height: 110%;
+        /* 66px */
+    letter-spacing: -2.7px;
+    text-transform: uppercase;
+}
+
+.book-now-text{
+    width: 208px;
+    height: 36px;
+    color: #11131F;
+    font-size: 18px;
+    line-height: 110%;
+        /* 19.8px */
+    letter-spacing: -0.81px;
+
+}
+
+
 
 .hero-title {
     color: var(--white);
     font-size: 60px;
     font-style: normal;
     font-weight: 500;
-    line-height: 0.66;
+    line-height: 110%;
     letter-spacing: -2.7px;
     margin-bottom: 16px;
     padding-top: 132px;
-    max-width: 554px;
+    width: 100%;
 }
 
 .hero-accent{
-    background: var(--linear-green, linear-gradient(107deg, #BEC7C2 0%, #A1B5BA 100%));
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -30,6 +200,8 @@
     font-weight: 500;
     line-height: 110%;
     letter-spacing: -2.7px;
+    background-color: #bec7c2, #a1b5ba;
+    background-image: linear-gradient(90deg, #bec7c2, #a1b5ba);
 }
 
 .hero-text {
@@ -37,8 +209,12 @@
     line-height: 140%;
     /* 22.4px */
     letter-spacing: -0.32px;
-    width: 539px;
+    max-width: 539px;
     margin-bottom: 32px;
+}
+
+.text-button{
+    width: 554px;
 }
 
 .button-container{
