--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <!-- Vadym -->
-
- <hr class="line_footer" />
+<footer>
+  <hr class="line_footer" />
   <div class="container footer_container">
     <div class="container_logo_and_title">
       <ul class="footer_logo_and_title">
@@ -24,7 +24,6 @@
     <div class="social_footer">
       <p class="social_footer_text">WE IN SOCIAL</p>
       <ul class="social_icons">
-        
         <li class="ramka">
           <a href="#" class="social_media_link">
             <svg width="8" height="16">
@@ -69,10 +68,10 @@
       </ul>
     </div>
   </div>
-      <div class="container_vnizu_stranici">
+  <div class="container_vnizu_stranici">
     <ul class="spisok_vnizu_stranici">
       <p class="tekst_vnizu_stranici">2023. Yacht Adventures</p>
       <p class="tekst_vnizu_stranici">Privacy Policy</p>
     </ul>
-    </div>
+  </div>
 </footer>
