--- a/src/css/header.css
+++ b/src/css/header.css
@@ -156,8 +156,11 @@
 */
 
 .menu-container {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+      height: 100%;
+      width: 100vw;
+      height: 100vh;
+ 
   position: fixed;
   top: 0;
   left: 0;
