--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,15 +1,27 @@
 <!-- Kateryna Zhylan -->
 
-  
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+  </head>
+  <body>
+    
+
+
 
 <!-- Header section -->
-<header class="header container">
-  <div class="header-container">
+
+
+<header class="header">
+  <div class="header-container container">
     <div class="logo-section">
       
       <img class="favicon" src="./images/logo/favicon.svg" alt="Boat" width="23" height="23">
       <a href="./index.html">
-      <img class="yacht-adv-icon" src="./images/logo/yacht Adventures.svg" alt="text-adv" width="186" height="23">
+      <img class="yacht-adv-icon" src="./images/logo/yachtadventures.svg" alt="text-adv" width="186" height="23">
       </a>
     </div>
 
@@ -48,7 +60,7 @@
   <div class="mob-logo-section">
     <img src="./images/logo/favicon.svg" alt="Boat" width="18" height="18">
     <a href="./index.html">
-    <img src="./images/logo/yacht Adventures.svg" alt="text-adv" width="146" height="10">
+    <img src="./images/logo/yachtadventures.svg" alt="text-adv" width="146" height="10">
     </a>
 
     <button class="menu-toggle js-close-menu">
@@ -69,6 +81,8 @@
 </div>
 
 
-
+  </body>
+  
+  </html>
 
 
