--- a/src/css/yahts-block.css
+++ b/src/css/yahts-block.css
@@ -38,6 +38,20 @@
 
 .container-swiper {
   position: relative;
+  top: -200px;
+  margin-bottom: -200px;
+}
+@media only screen and (min-width: 768px) {
+  .container-swiper {
+    top: -40px;
+    margin-bottom: -40px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .container-swiper {
+    top: -80px;
+    margin-bottom: -80px;
+  }
 }
 .container-swiper::after {
   display: block;
