--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <!-- Vadym -->
-
- <hr class="line_footer" />
+<footer>
+  <hr class="line_footer" />
   <div class="container footer_container">
     <div class="container_logo_and_title">
       <ul class="footer_logo_and_title">
@@ -68,10 +68,10 @@
       </ul>
     </div>
   </div>
-      <div class="container_vnizu_stranici">
+  <div class="container_vnizu_stranici">
     <ul class="spisok_vnizu_stranici">
       <p class="tekst_vnizu_stranici">2023. Yacht Adventures</p>
       <p class="tekst_vnizu_stranici">Privacy Policy</p>
     </ul>
-    </div>
+  </div>
 </footer>
