--- a/src/partials/reviews-block.html
+++ b/src/partials/reviews-block.html
@@ -13,7 +13,7 @@
       </p>
     </div>
     <ul class="list review-block-images">
-      <li class="list review-block-images-bkg">
+      <li class="review-block-images-bkg">
         <img
           class="review-block-img"
           srcset="./img/images/John_Wax.jpg 1x, ./img/images/John_Wax@2x.jpg 2x"
@@ -31,7 +31,7 @@
           </p>
         </div>
       </li>
-      <li class="list review-block-images-bkg">
+      <li class="card-two review-block-images-bkg">
         <img
           class="review-block-img"
           srcset="
@@ -52,7 +52,7 @@
           </p>
         </div>
       </li>
-      <li class="list review-block-images-bkg">
+      <li class="card-three review-block-images-bkg">
         <img
           class="review-block-img"
           srcset="
