--- a/src/partials/reviews-block.html
+++ b/src/partials/reviews-block.html
@@ -12,7 +12,7 @@
         about their journey with us.
       </p>
     </div>
-    <ul class="list review-block-images">
+    <ul class="review-block-images">
       <li class="review-block-images-bkg">
         <img
           class="review-block-img"
