--- a/src/css/reviews-block.css
+++ b/src/css/reviews-block.css
@@ -48,14 +48,6 @@
   background: #1f212d;
 }
 
-.card-two {
-  display: none;
-}
-
-.card-three {
-  display: none;
-}
-
 .review-block-img {
   display: flex;
   margin: 0 auto;
@@ -211,5 +203,21 @@
     margin-bottom: 16px;
     width: 68px;
     height: 68px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .card-two {
+    display: none;
+  }
+
+  .card-three {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .card-three {
+    display: none;
   }
 }
