--- a/src/partials/reviews-block.html
+++ b/src/partials/reviews-block.html
@@ -74,5 +74,8 @@
         </div>
       </li>
     </ul>
+    <a class="review-block-link" href="#top">
+      <img src="./img/images/arrow_up.svg" />
+    </a>
   </div>
 </section>
