--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <!-- Vadym -->
-<footer>
+<footer class="position">
   <hr class="line_footer" />
   <div class="container footer_container">
     <div class="container_logo_and_title">
