image path chages

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -83,7 +83,7 @@
 }
 
 .hero-clients-images-list{
-    background-image: url(..//img/hero-images/desktop-background@2x-min.png);
+    background-image: url(//img/hero-images/desktop-background@2x-min.png);
     background-repeat: no-repeat;
     margin-top: 64px;
     max-width: 426px;
