--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -27,7 +27,7 @@
                       ./img/services/diving_mob_2x.png 2x
                     " media="(min-width: 375px)" type="image/png" /> -->
           
-              <img class="first-person" src="..//img/hero-images/desktop-first-man@1x-min.png"
+              <img class="first-person" src="./img/hero-images/desktop-first-man@1x-min.png"
                 alt="First client middle-aged man" />
             </picture>
           </li>
@@ -47,7 +47,7 @@
                           ./img/services/diving_mob_2x.png 2x
                         " media="(min-width: 375px)" type="image/png" /> -->
     
-      <img class="second-person" src="..//img/hero-images/desktop-second-person@1x-min.png" alt="Second client middle-aged woman" />
+      <img class="second-person" src="./img/hero-images/desktop-second-person@1x-min.png" alt="Second client middle-aged woman" />
       </picture>
       </li>
       <li class="hero-third-person">
@@ -66,7 +66,7 @@
                                 ./img/services/diving_mob_2x.png 2x
                               " media="(min-width: 375px)" type="image/png" /> -->
       
-        <img class="third-person" src="..//img/hero-images/desktop-third-person@1x-min.png"
+        <img class="third-person" src="./img/hero-images/desktop-third-person@1x-min.png"
           alt="Third client middle-aged man" />
         </picture>
         </li>
@@ -88,7 +88,7 @@
                                         ./img/services/diving_mob_2x.png 2x
                                       " media="(min-width: 375px)" type="image/png" /> -->
         
-          <img class="man-sunglasses" src="..//img/hero-images/desktop-man@1x-min.png"
+          <img class="man-sunglasses" src="./img/hero-images/desktop-man@1x-min.png"
             alt="Man wearing sunglasses and striped shirt" />
           </picture>
           </li>
@@ -109,7 +109,7 @@
                                                   ./img/services/diving_mob_2x.png 2x
                                                 " media="(min-width: 375px)" type="image/png" /> -->
           
-            <img class="hero-yacht" src="..//img/hero-images/desktop-yacht@1x-min.png"
+            <img class="hero-yacht" src="./img/hero-images/desktop-yacht@1x-min.png"
               alt="Modern comfortable fancy-looking yacht" />
             </picture>
             </li>
