--- a/src/partials/reviews-block.html
+++ b/src/partials/reviews-block.html
@@ -56,10 +56,10 @@
         <img
           class="review-block-img"
           srcset="
-            ./img/images/Ihor_Trachuk.jpg 1x,
-            ./img/images/Ihor_Trachuk@2x  2x
+            ./img/images/Victoria_Romashenko.jpg    1x,
+            ./img/images/Victoria_Romashenko@2x.jpg 2x
           "
-          src="./img/images/Ihor_Trachuk.jpg"
+          src="./img/images/Victoria_Romashenko.jpg"
           alt="Ihor Trachuk photo"
           width="56"
           height="56"
