--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <!-- Vadym -->
-<footer class="position">
+<footer>
   <hr class="line_footer" />
   <div class="container footer_container">
     <div class="container_logo_and_title">
@@ -31,6 +31,7 @@
             </svg>
           </a>
         </li>
+
         <li>
           <a href="#" class="social_media_link">
             <svg
@@ -56,6 +57,7 @@
             </svg>
           </a>
         </li>
+
         <li>
           <a href="#" class="social_media_link">
             <svg width="32" height="32" class="ramka">
