--- a/src/css/rent-block.css
+++ b/src/css/rent-block.css
@@ -3,7 +3,6 @@
 .rent {
   font-family: DM Sans, sans-serif;
   padding: 40px 0;
-  overflow: hidden;
 }
 
 @media only screen and (min-width: 768px) {
@@ -33,15 +32,15 @@
   content: '';
   width: 283px;
   height: 283px;
-  transform: rotate(-44.916deg);
+
   flex-shrink: 0;
   border-radius: 283px;
   opacity: 0.6000000238418579;
   background: #91afba;
   filter: blur(100px);
 
-  top: 360px;
-  right: -160px;
+  top: 400px;
+  left: 211px;
   z-index: 0;
 }
 @media only screen and (min-width: 768px) {
@@ -51,7 +50,7 @@
     transform: rotate(-44.094deg);
     border-radius: 413px;
     top: 100px;
-    right: -220px;
+    left: 623px;
   }
 }
 @media only screen and (min-width: 1280px) {
@@ -60,8 +59,8 @@
     height: 414px;
     transform: rotate(-45.074deg);
     border-radius: 414px;
-    top: 180px;
-    right: -150px;
+    top: 105px;
+    left: 1070px;
   }
 }
 
@@ -189,6 +188,12 @@
   letter-spacing: -0.63px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media only screen and (min-width: 768px) {
+  .form-btn {
+    font-size: 18px;
+    letter-spacing: -0.81px;
+  }
 }
 
 .form-btn:hover,
