--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,97 +1,107 @@
 <!-- Kateryna Zhylan -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-
-  <!DOCTYPE html>
-  <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+      </head>
+      <body>
+        <!-- Header section -->
 
+        <header class="header">
+          <div class="header-container container">
+            <div class="logo-section">
+              <img
+                class="favicon"
+                src="./images/logo/favicon.svg"
+                alt="Boat"
+                width="23"
+                height="23"
+              />
+              <a href="./index.html">
+                <img
+                  class="yacht-adv-icon"
+                  src="./images/logo/yachtadventures.svg"
+                  alt="text-adv"
+                  width="186"
+                  height="23"
+                />
+              </a>
+            </div>
 
+            <nav class="header-nav">
+              <ul class="header-list list">
+                <li class="header-item">
+                  <a class="header-link link" href="#about">About</a>
+                </li>
 
-<!-- Header section -->
+                <li class="header-item">
+                  <a class="header-link link" href="#yachts">Yachts</a>
+                </li>
 
+                <li class="header-item">
+                  <a class="header-link link" href="#reviews">Reviews</a>
+                </li>
+              </ul>
 
-<header class="header">
-  <div class="header-container container">
-    <div class="logo-section">
-      
-      <img class="favicon" src="./images/logo/favicon.svg" alt="Boat" width="23" height="23">
-      <a href="./index.html">
-      <img class="yacht-adv-icon" src="./images/logo/yachtadventures.svg" alt="text-adv" width="186" height="23">
-      </a>
-    </div>
+              <button
+                class="menu-burger js-open-menu"
+                aria-expanded="false"
+                aria-controls="mobile-menu"
+              >
+                <svg class="icon-burger" width="24" height="24">
+                  <use href="./images/icons.svg#icon-burger"></use>
+                </svg>
+              </button>
+            </nav>
+          </div>
+        </header>
 
-    <nav class="header-nav">
-      <ul class="header-list list">
+        <!-- Mobile MENU -->
 
-        <li class="header-item">
-          <a class="header-link link" href="#about">About</a>
-        </li>
+        <div
+          class="menu-container js-menu-container container"
+          id="mobile-menu"
+        >
+          <div class="mob-logo-section">
+            <img
+              src="./images/logo/favicon.svg"
+              alt="Boat"
+              width="18"
+              height="18"
+            />
+            <a href="./index.html">
+              <img
+                src="./images/logo/yachtadventures.svg"
+                alt="text-adv"
+                width="146"
+                height="10"
+              />
+            </a>
 
+            <button class="menu-toggle js-close-menu">
+              <svg class="icon-close" width="24" height="24">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+          </div>
 
-        <li class="header-item">
-          <a class="header-link link" href="#yachts">Yachts</a>
-        </li>
-
-        <li class="header-item">
-          <a class="header-link link" href="#reviews">Reviews</a>
-        </li>
-
-      </ul>
-
-      <button class="menu-burger js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-        <svg class="icon-burger" width="24" height="24">
-          <use href="./images/icons.svg#icon-burger"></use>
-        </svg>
-      </button>
-    </nav>
-  </div>
-  
-
-</header>
-
-<!-- Mobile MENU -->
-
-<div class="menu-container js-menu-container container" id="mobile-menu">
-  <div class="mob-logo-section">
-    <img src="./images/logo/favicon.svg" alt="Boat" width="18" height="18">
-    <a href="./index.html">
-    <img src="./images/logo/yachtadventures.svg" alt="text-adv" width="146" height="10">
-    </a>
-
-    <button class="menu-toggle js-close-menu">
-      <svg class="icon-close" width="24" height="24">
-        <use href="./images/icons.svg#icon-close"></use>
-      </svg>
-
-    </button>
-  </div>
-
-  <ul class="mobile-menu">
-    <li><a href="#about" class="mob-menu-link link">About</a></li>
-    <li><a href="#yachts" class="mob-menu-link link">Yachts</a></li>
-    <li><a href="#reviews" class="mob-menu-link link">Reviews</a></li>
-  </ul>
-
-
-</div>
-
-
+          <ul class="mobile-menu">
+            <li><a href="#about" class="mob-menu-link link">About</a></li>
+            <li><a href="#yachts" class="mob-menu-link link">Yachts</a></li>
+            <li><a href="#reviews" class="mob-menu-link link">Reviews</a></li>
+          </ul>
+        </div>
+      </body>
+    </html>
   </body>
-  
-  </html>
-
-
+</html>
