--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,8 +24,8 @@
 <!-- Header section -->
 
 
-<header class="header">
-  <div class="header-container container">
+<header >
+  <div class="header-container">
     <div class="logo-section">
       
       <img class="favicon" src="./images/logo/favicon.svg" alt="Boat" width="23" height="23">
