--- a/src/css/header.css
+++ b/src/css/header.css
@@ -88,6 +88,7 @@
     align-items: center;
     gap: 269px;
     margin-top: 32px;
+    margin-left: 32px;
   }
 
   .logo-section {
@@ -96,6 +97,7 @@
     justify-content: center;
     align-items: center;
     gap: 8px;
+   
   }
 
   .header-container::after {
@@ -121,7 +123,7 @@
     align-items: center;
     gap: 781px;
     margin-top: 32px;
-
+    margin-left: 32px;
   }
 
   .logo-section {
@@ -130,7 +132,9 @@
     align-items: center;
     gap: 8px;
     flex: 1 0 0;
+   
   }
+   
 
   .header-container::after {
     content: "";
